# CppReflection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Reflection.sln
ProjectFiles/: Reflection.sln  Reflection.vcxproj  Reflection.vcxproj.filters
Reflection/: CallReflectedFunction.h  Field.h  FieldInfo.h  Function.h  FunctionPoinerReflector.h  FunctionReflector.h  FunctionTypeReflector.h  GetTypeInfo.h  ReflectedFunction.h  ReflectedFunctionImpl.cpp  ReflectedFunctionImpl.h  Reflection.vcxproj  Type.h  TypeComparisonOperators.h  TypeFlag.h  TypeInfo.h  TypeInfoImpl.cpp  TypeInfoImpl.h  TypeReflector.h  TypeRegistry.h  TypeRegistryImpl.cpp  TypeRegistryImpl.h  TypeSpecialMembers.h  main.cpp
Reflection/Detail/: CallReflectType.h  FieldImpl.cpp  FieldImpl.h  FieldReflector.h  FieldTraits.h  FunctionImpl.h  FunctionPoinerTraits.h  FunctionReflector.h  FunctionTypeTraits.h  MakeTypeComparisonOperators.h  MakeTypeSpecialMembers.h  ReflectedFunctionImpl.cpp  ReflectedFunctionImpl.h  TypeImpl.h  TypeInfoImpl.cpp  TypeInfoImpl.h  TypeRegistryImpl.cpp  TypeRegistryImpl.h
code/: CMakeLists.txt
code/include/CppReflection/: CallReflectedFunction.h  CallReflectedFunction.hpp  Common.h  Common.hpp  Field.h  Field.hpp  Function.h  Function.hpp  GetStaticTypeInfo.hpp  GetTypeInfo.h  GetTypeInfo.hpp  PrimitiveTypeReflection.h  PrimitiveTypeReflection.hpp  ReflectionProvider.hpp  Type.h  Type.hpp  TypeComparisonOperators.hpp  TypeFlag.hpp  TypeReflector.h  TypeRegistry.h  TypeRegistry.hpp  TypeSpecialMembers.hpp
code/include/CppReflection/Detail/: CallReflectType.hpp  FieldReflector.h  FieldTraits.hpp  FunctionReflector.h  FunctionTraits.hpp  HasOperator.hpp  MakeTypeComparisonOperators.hpp  MakeTypeSpecialMembers.h  MakeTypeSpecialMembers.hpp
code/include/CppReflection/Reflector/: FieldReflector.h  FieldReflector.hpp  FunctionReflector.h  FunctionReflector.hpp  TypeReflector.h  TypeReflector.hpp
code/include/CppReflection/StaticType/: class.hpp  class_to_dynamic.hpp  enum.hpp  fundamental.hpp  fundamental_predefined.hpp
code/source/: FieldImpl.cpp  FieldImpl.h  FieldImpl.hpp  FunctionImpl.cpp  FunctionImpl.h  FunctionImpl.hpp  TypeImpl.cpp  TypeImpl.h  TypeImpl.hpp  TypeRegistryImpl.cpp  TypeRegistryImpl.h  TypeRegistryImpl.hpp
include/CppReflection/: CallReflectedFunction.h  Field.h  Function.h  GetTypeInfo.h  PrimitiveTypeReflection.h  Type.h  TypeFlag.h  TypeReflector.h  TypeRegistry.h  TypeSpecialMembers.h
include/CppReflection/Detail/: CallReflectType.h  FieldImpl.cpp  FieldImpl.h  FieldReflector.h  FieldTraits.h  FunctionImpl.cpp  FunctionImpl.h  FunctionReflector.h  FunctionTraits.h  HasOperator.h  MakeTypeComparisonOperators.h  MakeTypeSpecialMembers.h  TypeImpl.cpp  TypeImpl.h  TypeRegistryImpl.cpp  TypeRegistryImpl.h
tests/: CMakeLists.txt  ComparisonOperators.cpp  Fields.cpp  Methods.cpp  SpecialMembers.cpp  StaticMethods.cpp  StaticTypeInfo.cpp  TypeGUID.cpp  main.cpp  util.cpp
